--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
 <h3>
 <a name="05-credits-physical-science" class="anchor" href="#05-credits-physical-science"><span class="octicon octicon-link"></span></a>0.5 Credits, Physical Science</h3>
+
+<p><a href="syllabus.html">Syllabus</a></p>
       </section>
     </div>
 
