Created index, syllabus using ipython.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>[syllabus]</title>
+<title>[index]</title>
 <style type="text/css">
     .clearfix{*zoom:1;}.clearfix:before,.clearfix:after{display:table;content:"";line-height:0;}
 .clearfix:after{clear:both;}
@@ -1694,14 +1694,11 @@ init_mathjax();
 <body>
 
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="the-periodic-table"><a href="index.html">The Periodic Table</a></h1>
+<h1 id="the-periodic-table">The Periodic Table</h1>
+<h3 id="an-open-curriculum-for-a-physical-science-class">An open curriculum for a physical science class</h3>
 <h3 id="pacific-high-school-fall-2013">Pacific High School, Fall 2013</h3>
 <h3 id="credits---physical-science">0.5 Credits - Physical Science</h3>
-<p>1-Sentence:</p>
-<p>Elevator Pitch:</p>
-<h2 id="investigation-0-what-is-science">Investigation 0: What is Science?</h2>
-<h2 id="investigation-1-atoms-and-molecules">Investigation 1: Atoms and Molecules</h2>
-<h2 id="investigation-2-the-periodic-table">Investigation 2: The Periodic Table</h2>
+<p><a href="syllabus.html">Syllabus</a></p>
 </div>
 <div class="text_cell_render border-box-sizing rendered_html">
 
